modification ajout du css

--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
+<!DOCTYPE html>
+
 <html>
+
+
+<head>
+<!--<link type="text/css" rel="test" href="test.css">-->
+
+</head>
+
+
 <title>
     site de k4zzii
 </title>
 
-<head>
 
-
-</head>
 
 
 
 <body> 
 
 <h1>
-bienvenue chez toi chacal ! 
+Bienvenue chez toi chacal ! 
 
 </h1>
 
