--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <head>
-<!--<link type="text/css" rel="test" href="test.css">-->
+<!--<link type="text/css" rel="style" href="assets/css/style.csstest.css">-->
 
 </head>
 
