modification css color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <head>
-<!--<link type="text/css" rel="style" href="style.css">-->
+<link type="text/css" rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -26,7 +26,12 @@ Bienvenue chez toi chacal !
 
 <p1>
     Ici c'est la rue, on bibi et on mange des grecs. On éssaye de faire des sites internet quali 
+
+    <img src="assets/pp slack 3.jpg"
 </p1>
+
+
+
 </body>
 
 
