modif css bg+img

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Bienvenue chez toi chacal !
 <p1>
     Ici c'est la rue, on bibi et on mange des grecs. On éssaye de faire des sites internet quali 
 
-    <img src="assets/pp slack 3.jpg"
+    <img src="assets/pp slack 3.jpg">
 </p1>
 
 
